2007-10-19  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/dialogs/file/save.py (set_name):
	Set the current folder before setting filename.

2007-10-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/open-dialog.glade:
	* data/glade/save-dialog.glade:
	Fix extra widget spacing on sides.

2007-10-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	* gaupol/tags/microdvd.py:
	* gaupol/tags/mpl2.py:
	* gaupol/tags/ssa.py:
	* gaupol/tags/subrip.py:
	* gaupol/tags/taglib.py:
	Fix wild and potentially wild regular expressions for tags that matched
	text after the tag as well causing that text to be removed when
	converting tags to a different format. (#10140)

2007-10-12  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/clipboard.py:
	* gaupol/agents/edit.py:
	* gaupol/agents/format.py:
	* gaupol/agents/open.py:
	* gaupol/agents/position.py:
	* gaupol/agents/save.py:
	* gaupol/agents/search.py:
	* gaupol/agents/text.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/assistants/text/assistant.py:
	* gaupol/gtk/assistants/text/capitalization.py:
	* gaupol/gtk/assistants/text/error.py:
	* gaupol/gtk/assistants/text/hearing.py:
	* gaupol/gtk/assistants/text/line.py:
	* gaupol/gtk/conf/config.py:
	* gaupol/gtk/dialogs/duration.py:
	* gaupol/gtk/dialogs/insert.py:
	* gaupol/gtk/dialogs/split.py:
	* gaupol/gtk/page.py:
	* gaupol/liner.py:
	* gaupol/project.py:
	Rename "indexes" to "indices".

2007-10-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/__init__.py:
	Bump version number.

	RELEASE 0.12.1

2007-10-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/assistants/text/assistant.py:
	* gaupol/gtk/assistants/text/introduction.py:
	* gaupol/gtk/dialogs/debug.py:
	* gaupol/gtk/dialogs/file/save.py:
	* gaupol/gtk/dialogs/search.py:
	* gaupol/gtk/output.py:
	* gaupol/gtk/page.py:
	Fix remaining NameErrors with function arguments. (#10034)

2007-10-01  Osmo Salomaa  <otsaloma@cc.hut.fi>
